[package]
name = "async-mongodb-session"
version = "2.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/async-mongodb-session"
documentation = "https://docs.rs/async-mongodb-session"
description = "An async-session implementation for MongoDB"
readme = "README.md"
edition = "2018"
keywords = ["tide", "web", "async", "session", "mongodb"]
categories = [
  "network-programming",
  "asynchronous",
  "web-programming::http-server"
]
authors = [
    "Yoshua Wuyts <yoshuawuyts@gmail.com>",
    "Irina Shestak <shestak.irina@gmail.com>",
    "Anton Whalley <anton@venshare.com>",
    "Javier Viola <pepoviola@gmail.com>"
]

[features]

[dependencies]
mongodb = { version = "2.2.1", default-features = false, features = ["async-std-runtime", "bson-chrono-0_4"] }
# can not go higher due to dev-dependencie "tide" which requires "async-session" in version 2.0.1
async-session = "2.0.1"

[dev-dependencies]
async-std = { version = "1.11.0", features = ["attributes"] }
rand = {version = "0.8.5"}
lazy_static = "1.4.0"
tide = "0.16"
